--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.26.1",
+    "firebase": "^9.6.10",
     "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
