--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
+    "formik": "^2.2.9",
     "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
