--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
