--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
