--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "resolutions": {
+    "csstype": "3.0.10"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.26.1",
-    "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "react": "^17.0.2",
