--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-input-mask": "^2.0.4",
     "react-query": "^3.34.19",
     "react-router-dom": "6",
+    "sass": "^1.51.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
