--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@chakra-ui/storybook-addon": "^1.0.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@storybook/addon-actions": "^6.4.22",
