--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch"
   },
   "resolutions": {
     "csstype": "3.0.10"
@@ -41,6 +42,10 @@
     "@storybook/builder-vite": "^0.1.32",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-input-mask": "^3.0.1",
@@ -49,6 +54,8 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.4",
+    "jest": "^27",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   },
