--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27",
     "ts-jest": "^27.1.4",
     "typescript": "^4.5.4",
