--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12",
+    "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.33",
@@ -56,6 +57,8 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27",
+    "msw": "^0.39.2",
+    "react-test-renderer": "^16.9.0",
     "ts-jest": "^27.1.4",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
