--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@chakra-ui/storybook-addon": "^1.0.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@faker-js/faker": "^6.3.1",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
