--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: yarn
       - run: yarn
       - run: yarn jest
 
@@ -27,5 +28,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: yarn
       - run: yarn
       - run: yarn build
