--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:badges": "jest --coverage && jest-coverage-badges --output ./.github/badges"
   },
   "resolutions": {
