--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "framer-motion": "^6",
+    "i18next": "^21.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.3",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.19",
     "react-router-dom": "6",
