test: add some tests for NavBar

--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@testing-library/react": "^12",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^14.1.1",
+    "@types/css-mediaquery": "^0.1.1",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-loader": "^8.2.5",
     "commitizen": "^4.2.4",
+    "css-mediaquery": "^0.1.2",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
