--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "6",
     "react-spring": "^9.4.4",
     "sass": "^1.51.0",
+    "swiper": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
